# seaos-os

./: Makefile  README  bochsrc.txt  configure
data/: a  b
data/boot/grub/: menu.lst
data/config/: bad  bashrc  passwd  profile  pswd  termcap
data/config/rc/: autosync  boot  loop  net  rand  shutdown
data/config/run/start/: 99final.sh
data/config/run/stop/: .15loop.sh  40end.sh
data/sys/: greeting
toolchain/: Makefile  install_toolchain.sh  newlib-1.20.0-seaos.patch
toolchain/newlib-sys-seaos/: Makefile.am  Makefile.in  at.c  cfspeed.c  ch.c  configure.in  ctl.c  ctype.c  dir.c  execve.c  exit.c  fs.c  ftok.c  id.c  ksyscall.h  link.c  log.c  mmap.c  mount.c  nice.c  pathconf.c  proc.c  rw.c  seaos.c  signal.c  special.c  stat.c  sysc.c  syscalls.c  truncate.c
toolchain/newlib-sys-seaos/autom4te.cache/: output.0  traces.0
toolchain/newlib-sys-seaos/machine/: configure
toolchain/newlib-sys-seaos/machine/autom4te.cache/: output.4  traces.1  traces.4
toolchain/newlib-sys-seaos/machine/i386/autom4te.cache/: output.4  traces.4
tools/: build.sh  chd.sh  close_hdimage.sh  open_hdimage.sh
trunk/: Makefile  README  build_number  configure
trunk/data/: Makefile  t.asm  t.c  test.sh
trunk/data/boot/grub/: menu.lst
trunk/data/config/: bashrc  passwd  profile  termcap
trunk/data/config/bob/: t.c
trunk/data/config/rc/: boot  shutdown
trunk/data/config/run/start/: .90autosync.sh  .90loop.sh  .90net.sh  .90rand.sh  00first.sh  99final.sh
trunk/data/etc/rc/: boot
trunk/data/sys/: greeting
trunk/toolchain/: Makefile  install_extras.sh  install_toolchain.sh  newlib-1.20.0-seaos.patch
trunk/toolchain/newlib-sys-seaos/: Makefile.am  at.c  ch.c  configure  crt0.c  ctl.c  dir.c  fork.c  link.c  log.c  mmap.c  module.c  mount.c  nice.c  openclose.c  pathconf.c  remaining.c  rw.c  seaos.c  signal.c  srv.c  stat.c  sync.c  sysc.c  termios.c  time.c  truncate.c
trunk/toolchain/newlib-sys-seaos/autom4te.cache/: requests  traces.1
trunk/toolchain/newlib-sys-seaos/machine/i386/: configure
trunk/toolchain/newlib-sys-seaos/machine/i386/autom4te.cache/: traces.1
trunk/toolchain/newlib-sys-seaos/sys/: dirent.h
trunk/tools/: chd.sh  close_hdimage.sh  dist.sh  open_hdimage.sh
trunk/tools/cd/: kernel
(+3 files in other folders)
